
* Added SHWDeepImageReader and SHWDeepImageWriter which read/write 3delight deep shadows. Note that this is an alpha only format.

* Added HoudiniHeaderGenerator which stores Houdini version, scene name, frame rate, current, start, and end frames in the ObjectWriter headers.

Improvements :

* IECore.RelativePreset accepts now a compare filter that is a callback for ignoring some of the parameters when doing the diff.

* IECore.loadConfig() now ignores files starting with ~. This avoids errors caused by certain popular text editors saving backup files next to the config file during editing.

* The IECore.loadConfig() localsDict argument has been renamed to contextDict, and is now used as both the locals and globals for the execution of the config files. This works around python's annoying scoping whereby any modules would have to be imported within functions defined in the config files rather than
at the file scope.

* Added python bindings for the various Writer canWrite() methods.

* The Renderer::coordinateSystem() call now creates coordinate systems which are
scoped within attributeBegin()/attributeEnd() blocks. CoordinateSystem instances
can now be given a transform to position them relative to their parent.

* CompoundParameter presets behaviour can now be controlled explicitly using the
adoptChildPresets argument to the constructor.

* Reduced cross-inclusion of headers in TypedObjectParameter.h - this should improve recompilation times a little.

* Added IECoreGL::NameStateComponent::glNameFromName() method to match the existing nameFromGLName() method.

* Added glColor() functions to IECoreGL/GL.h.

* Factored out much of the IECoreGL::Scene::select() functionality into a new IECoreGL::Selector class, which allows selection to be performed easily even without a Scene.

* IECoreGL::Scene::select() now fills a vector<HitRecord> rather than a list<HitRecord>, as vector is better suited to this purpose.
