@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
 //
 //  Copyright 2010 Dr D Studios Pty Limited (ACN 127 184 954) (Dr. D Studios),
 //  its affiliates and/or its licensors.
@@ -301,6 +301,7 @@
 #include "IECorePython/DeepImageWriterBinding.h"
 #include "IECorePython/DeepImageConverterBinding.h"
 #include "IECorePython/MurmurHashBinding.h"
+#include "IECorePython/DiskPrimitiveBinding.h"
 
 #include "IECore/IECore.h"
 
@@ -607,6 +608,7 @@ BOOST_PYTHON_MODULE(_IECore)
 	bindDeepImageWriter();
 	bindDeepImageConverter();
 	bindMurmurHash();
+	bindDiskPrimitive();
 
 	def( "majorVersion", &IECore::majorVersion );
 	def( "minorVersion", &IECore::minorVersion );
