@@ -257,6 +257,7 @@ from ConfigLoaderTest import ConfigLoaderTest
 from MurmurHashTest import MurmurHashTest
 from BoolVectorData import BoolVectorDataTest
 from CompoundParameterTest import CompoundParameterTest
+from DiskPrimitiveTest import DiskPrimitiveTest
 
 if IECore.withASIO() :
 	from DisplayDriverTest import *
